# chip8-emu

./: .clang-format  .clang-tidy  .gitignore  .justfile  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
chip8/: CMakeLists.txt  chip8.cpp
glad/include/glad/: gl.h
include/chip8/: chip8.h  display.h  memory.h
shaders/: fragment.frag  vertex.vert
src/: CMakeLists.txt  chip8.cpp  commands.cpp  commands.h  common.h  cpu.cpp  cpu.h  display.cpp  display.h  main.cpp  memory.cpp  memory.h  ram.cpp  ram.h  registers.cpp  registers.h
tests/: CMakeLists.txt  memory_test.cpp
